@@ -395,7 +395,7 @@ class UserMailer {
  */
 class EmailNotification {
 	protected $subject, $body, $replyto, $from;
-	protected $timestamp, $summary, $minorEdit, $oldid, $composed_common;
+	protected $timestamp, $summary, $minorEdit, $oldid, $composed_common, $pageStatus;
 	protected $mailTargets = array();
 
 	/**
@@ -421,7 +421,7 @@ class EmailNotification {
 	 * @param $minorEdit
 	 * @param $oldid (default: false)
 	 */
-	public function notifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit, $oldid = false ) {
+	public function notifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit, $oldid = false, $pageStatus = 'changed' ) {
 		global $wgEnotifUseJobQ, $wgEnotifWatchlist, $wgShowUpdatedMarker, $wgEnotifMinorEdits,
 			$wgUsersNotifiedOnAllChanges, $wgEnotifUserTalk;
 
@@ -488,12 +488,13 @@ class EmailNotification {
 				'summary' => $summary,
 				'minorEdit' => $minorEdit,
 				'oldid' => $oldid,
-				'watchers' => $watchers
+				'watchers' => $watchers,
+				'pageStatus' => $pageStatus
 			);
 			$job = new EnotifNotifyJob( $title, $params );
 			$job->insert();
 		} else {
-			$this->actuallyNotifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit, $oldid, $watchers );
+			$this->actuallyNotifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit, $oldid, $watchers, $pageStatus );
 		}
 	}
 
@@ -511,7 +512,8 @@ class EmailNotification {
 	 * @param $oldid int Revision ID
 	 * @param $watchers array of user IDs
 	 */
-	public function actuallyNotifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit, $oldid, $watchers ) {
+	public function actuallyNotifyOnPageChange( $editor, $title, $timestamp, $summary, $minorEdit,
+							$oldid, $watchers, $pageStatus = 'changed' ) {
 		# we use $wgPasswordSender as sender's address
 		global $wgEnotifWatchlist;
 		global $wgEnotifMinorEdits, $wgEnotifUserTalk;
@@ -531,6 +533,12 @@ class EmailNotification {
 		$this->oldid = $oldid;
 		$this->editor = $editor;
 		$this->composed_common = false;
+		$this->pageStatus = $pageStatus;
+
+		$formattedPageStatus = array( 'deleted', 'created', 'moved', 'restored', 'changed' );
+		if ( !in_array( $this->pageStatus, $formattedPageStatus ) ) {
+			$this->pageStatus = 'changed';
+		}
 
 		$userTalkId = false;
 
@@ -621,27 +629,34 @@ class EmailNotification {
 		$keys = array();
 		$postTransformKeys = array();
 
+		// Default values
+		$keys['$PAGETITLE_URL'] = $this->title->getCanonicalUrl();
+		$keys['$CHANGEDORCREATED'] = wfMsgForContent( 'enotif-changedorcreated-' . $this->pageStatus );
+		$keys['$NEWPAGE'] = '';
+		// Status-specific values which overwrite default values
+		switch ( $this->pageStatus ) {
+			case 'created':
+				$keys['$NEWPAGE'] = "\n\n" . wfMsgForContent( 'enotif_newpagetext' );
+				break;
+		}
+
 		if ( $this->oldid ) {
 			// Always show a link to the diff which triggered the mail. See bug 32210.
-			$keys['$NEWPAGE'] = wfMsgForContent( 'enotif_lastdiff',
+			$keys['$NEWPAGE'] = "\n\n" . wfMsgForContent( 'enotif_lastdiff',
 				$this->title->getCanonicalUrl( 'diff=next&oldid=' . $this->oldid ) );
 			if ( !$wgEnotifImpersonal ) {
 				// For personal mail, also show a link to the diff of all changes
 				// since last visited.
-				$keys['$NEWPAGE'] .= " \n" . wfMsgForContent( 'enotif_lastvisited',
+				$keys['$NEWPAGE'] .= "\n\n" . wfMsgForContent( 'enotif_lastvisited',
 					$this->title->getCanonicalUrl( 'diff=0&oldid=' . $this->oldid ) );
 			}
 			$keys['$OLDID']   = $this->oldid;
-			$keys['$CHANGEDORCREATED'] = wfMsgForContent( 'changed' );
 		} else {
-			$keys['$NEWPAGE'] = wfMsgForContent( 'enotif_newpagetext' );
 			# clear $OLDID placeholder in the message template
 			$keys['$OLDID']   = '';
-			$keys['$CHANGEDORCREATED'] = wfMsgForContent( 'created' );
 		}
 
 		$keys['$PAGETITLE'] = $this->title->getPrefixedText();
-		$keys['$PAGETITLE_URL'] = $this->title->getCanonicalUrl();
 		$keys['$PAGEMINOREDIT'] = $this->minorEdit ? wfMsgForContent( 'minoredit' ) : '';
 		$keys['$UNWATCHURL'] = $this->title->getCanonicalUrl( 'action=unwatch' );
 
