@@ -49,7 +49,8 @@ class EnotifNotifyJob extends Job {
 			$this->params['summary'],
 			$this->params['minorEdit'],
 			$this->params['oldid'],
-			$this->params['watchers']
+			$this->params['watchers'],
+			$this->params['pageStatus']
 		);
 		return true;
 	}
