@@ -1914,8 +1914,11 @@ $wgMessageStructure = array(
 		'enotif_reset',
 		'enotif_newpagetext',
 		'enotif_impersonal_salutation',
-		'changed',
-		'created',
+		'enotif-changedorcreated-deleted',
+		'enotif-changedorcreated-created',
+		'enotif-changedorcreated-moved',
+		'enotif-changedorcreated-restored',
+		'enotif-changedorcreated-changed',
 		'enotif_subject',
 		'enotif_lastvisited',
 		'enotif_lastdiff',
